exports[`test should render a SlideGroup with animation enabled 1`] = `
<div
  className="slide-group">
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={true}
    transitionEnterTimeout={300}
    transitionLeave={true}
    transitionLeaveTimeout={300}
    transitionName={
      Object {
        "enter": "enter",
        "enterActive": "enter-active",
        "leave": "leave",
        "leaveActive": "leave-active",
      }
    }>
    <Slide
      isHidden={true}>
      <div>
        First
      </div>
    </Slide>
    <Slide
      isHidden={true}>
      <div>
        Second
      </div>
    </Slide>
    <Slide
      isHidden={false}>
      <div>
        Third
      </div>
    </Slide>
  </CSSTransitionGroup>
</div>
`;

exports[`test should render a default SlideGroup 1`] = `
<div
  className="slide-group">
  <CSSTransitionGroup
    transitionAppear={false}
    transitionEnter={false}
    transitionEnterTimeout={300}
    transitionLeave={false}
    transitionLeaveTimeout={300}
    transitionName={
      Object {
        "enter": "enter",
        "enterActive": "enter-active",
        "leave": "leave",
        "leaveActive": "leave-active",
      }
    }>
    <Slide
      isHidden={true}>
      <div>
        First
      </div>
    </Slide>
    <Slide
      isHidden={true}>
      <div>
        Second
      </div>
    </Slide>
    <Slide
      isHidden={false}>
      <div>
        Third
      </div>
    </Slide>
  </CSSTransitionGroup>
</div>
`;
